# fabric

./: .gitmodules  PKGBUILD  meson.build
submodules/: libcvc.patch
